# tpt-dev-dx

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  spec.txt  todo 1260714.md  todo.md
.github/workflows/: ci.yml  publish.yml
crates/cli-fixture/: Cargo.toml
crates/cli-fixture/src/: main.rs
crates/out-faker-rs/: Cargo.toml  README.md
crates/out-faker-rs-derive/: Cargo.toml  README.md
crates/out-faker-rs-derive/src/: lib.rs
crates/out-faker-rs/src/: lib.rs
crates/tpt-cargo-scrub/: Cargo.toml  README.md
crates/tpt-cargo-scrub/src/: cli.rs  main.rs  scan.rs  tui.rs
crates/tpt-cli-snap/: CHANGELOG.md  Cargo.toml  README.md
crates/tpt-cli-snap/src/: lib.rs
crates/tpt-cli-snap/tests/: cli_tests.rs
crates/tpt-cli-snap/tests/snapshots/: cli_fixture_both.snap  cli_fixture_code.snap  cli_fixture_env_stdin.snap
crates/tpt-env-mocker/: Cargo.toml  README.md
crates/tpt-env-mocker-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/tpt-env-mocker-macros/src/: lib.rs
crates/tpt-env-mocker/src/: lib.rs
crates/tpt-faker-rs/: CHANGELOG.md  Cargo.toml  README.md
crates/tpt-faker-rs-derive/: Cargo.toml  README.md
crates/tpt-faker-rs-derive/src/: lib.rs
crates/tpt-faker-rs/src/: lib.rs
crates/tpt-fixture/: CHANGELOG.md  Cargo.toml  README.md
crates/tpt-fixture-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/tpt-fixture-macros/src/: lib.rs
crates/tpt-fixture/src/: lib.rs
crates/tpt-fixture/tests/: integration.rs
crates/tpt-http-stub/: CHANGELOG.md  Cargo.toml  README.md
crates/tpt-http-stub/src/: lib.rs
crates/tpt-log-tap/: CHANGELOG.md  Cargo.toml  README.md
crates/tpt-log-tap/src/: lib.rs
crates/tpt-port-scout/: CHANGELOG.md  Cargo.toml  README.md
crates/tpt-port-scout/src/: lib.rs
crates/tpt-snapshot-lite/: Cargo.toml  README.md
crates/tpt-snapshot-lite/src/: lib.rs
crates/tpt-temp-fs/: Cargo.toml  README.md
crates/tpt-temp-fs/src/: lib.rs
