[package]
name = "cli-fixture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Test fixture binary for tpt-cli-snap integration tests — not published"
publish = false

[[bin]]
name = "cli-fixture"
path = "src/main.rs"

[dependencies]
