[package]
name = "tpt-env-mocker-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Proc-macro internals for tpt-env-mocker — do not use directly"
keywords = ["testing", "env", "macros", "proc-macro"]
categories = ["development-tools::testing"]
readme = "README.md"
exclude = [".github"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
